@@ -872,7 +872,7 @@ void version(void)
 #ifdef DISABLE_WRAPPING
     printf(" --disable-wrapping");
 #endif
-#ifdef DISABLE_ROOTWRAP
+#ifdef DISABLE_ROOTWRAPPING
     printf(" --disable-wrapping-as-root");
 #endif
 #ifdef ENABLE_COLOR
@@ -1742,7 +1742,7 @@ int main(int argc, char **argv)
     textdomain(PACKAGE);
 #endif
 
-#if !defined(ENABLE_NANORC) && defined(DISABLE_ROOTWRAP)
+#if !defined(ENABLE_NANORC) && defined(DISABLE_ROOTWRAPPING)
     /* If we don't have rcfile support, --disable-wrapping-as-root is
      * used, and we're root, turn wrapping off. */
     if (geteuid() == NANO_ROOT_UID)
@@ -2007,7 +2007,7 @@ int main(int argc, char **argv)
 	    tabsize = tabsize_cpy;
 	flags |= flags_cpy;
     }
-#ifdef DISABLE_ROOTWRAP
+#ifdef DISABLE_ROOTWRAPPING
     /* If we don't have any rcfiles, --disable-wrapping-as-root is used,
      * and we're root, turn wrapping off. */
     else if (geteuid() == NANO_ROOT_UID)
